# turbo-compiladores

./: .gitignore  README  proyecto.txt  proyecto_mates.py  python3.py
Proyecto/Calculator/: hoc1  hoc1.out  hoc1.y  hoc2  makefile  y.tab.c
Proyecto/Calculator/hoc1/: hoc1.y  makefile
Proyecto/Calculator/hoc2/: hoc2.y  makefile  y.tab.c
Proyecto/Calculator/hoc4/: code.c  hoc.h  hoc.y  hoc3  init.c  makefile  math.c
Proyecto/Calculator/hoc5/: code.c  hoc.h  hoc.y  hoc4  hoc5  init.c  makefile  x.tab.h
Proyecto/Calculator/hoc6/: code.c  example  fib  hoc.h  hoc.y  hoc6  init.c  makefile  math.c  symbol.c  while_inf  y.tab.h
Proyecto/Calculator/hoc6_arrays/: area  code.c  dotproduct  example  hoc.h  hoc.y  hoc6  init.c  test
Proyecto/Calculator/hoc6_experimental/: area  code.c  dot_product  fib  hoc.h  hoc.y  hoc6  test.txt  x.tab.h
Proyecto/hoc-9.2/: LICENSE  Makefile  Makefile.in  README  VERSION  WHATSNEW  code.c  config.status  configure  configure.in  fac  fib  forLoop  gamma.c  hoc  hoc.c  hoc.h  hoc.y  init.c  math.c  memory.c  symbol.c  version.c  y.tab.h
Proyecto/hoc-master/: hoc  y.tab.h
Tareas/Tarea1/: .~lock.tabla_conversion_ejemplo.ods#  NFA  NFA.gv  NFAtoDFA.py  RegexToNFA2.py  Regex_NFA_DFA (copy).py  Regex_NFA_DFA.py  RegextoNFA.py  infixToPostFix.py  tabla_conversion_ejemplo.ods
Tareas/Tarea1/env/local/: bin  include  lib
